--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.38.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "styled-components": "^5.3.6",
+    "toastify": "^2.0.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
